# Simulator2017

./: .gitmodules  CMakeLists.txt  README.md
VSbuild/: Simulator2017.sln  Simulator2017.vcxproj  Simulator2017.vcxproj.filters
VSbuild/Release/: Simulator2017.iobj  Simulator2017.ipdb  Simulator2017.vcxprojResolveAssemblyReference.cache
VSbuild/Release/Simulator2017.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Simulator2017.lastbuildstate  Simulator2017.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/: FindFreeGLUT.cmake
data/: StaticObstacles.txt  ref.txt  referenceCar_1195.txt  werling_grid_and_xy_grid.txt
include/: CollisionSystem.h  CollisionThread.h  DrawFunc.h  Geometry.h  GlutVizualisation.h  Grid.h  GridCollision.h  MapHandler.h  Model.h  ObstacleMap.h  OptimalTrajectory.h  PlannerTypes.h  RTError.h  Simulator.h  Trajectory.h  WerlingPoints.h  bitmap.h  globaldefines.h  matrix.h  planner.h
scripts/: myfile.m  showMyfile.m
src/: CollisionSystem.cpp  CollisionThread.cpp  DrawFunc.cpp  Geometry.cpp  GlutVizualisation.cpp  Grid.cpp  GridCollision.cpp  MAIN.cpp  MapHandler.cpp  Model.cpp  ObstacleMap.cpp  OptimalTrajectory.cpp  PlannerTypes.cpp  RTError.cpp  Simulator.cpp  Trajectory.cpp  WerlingPoints.cpp  matrix.cpp  planner.cpp
